solve overflow in design cart

--- a/src/scss/components/_forms.scss
+++ b/src/scss/components/_forms.scss
@@ -35,7 +35,7 @@
     line-height: 1.25;
 }
 .input-border {
-    border: 1px solid #f2f2f2;
+    border: 1px solid #6c757d;
 
 }
 .form-control-sm {
